<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.erica.recsfromtechs.Register"
    tools:showIn="@layout/activity_register"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/header"
        android:text="@string/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="40sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:background="@color/colorPrimaryDark"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />
    <EditText android:id="@+id/name"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center_horizontal" />
    <EditText android:id="@+id/username"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:hint="@string/createuser"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center_horizontal" />
    <EditText android:id="@+id/password"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorWhite"
        android:inputType="textPassword"
        android:ems="10"
        android:textColor="@color/colorWhite"
        android:hint="@string/createpass"
        android:layout_gravity="center_horizontal" />
    <Spinner
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:id="@+id/spinner"
        android:ems="10"
        android:hint="@string/major"
        android:layout_gravity="center_horizontal" />
    <View
        android:layout_width="209dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorBlack"/>

    <EditText android:id="@+id/email"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        />
    <EditText android:id="@+id/adminPassword"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:hint="@string/adminPass"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal" />

    <Button android:id="@+id/addUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button"

        android:textStyle="bold"
        android:padding="10dp"
        android:onClick="addUser"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorAccent"
        android:textColor="@color/colorWhite"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:background="@color/colorAccent"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:onClick="cancel"
        />


</LinearLayout>
